[gd_scene load_steps=13 format=3 uid="uid://chagcs3p0do08"]

[ext_resource type="PackedScene" uid="uid://770ogjr8832x" path="res://bosses/boss.tscn" id="1_sr4xh"]
[ext_resource type="Script" path="res://bosses/mision4/ferxxo_boss.gd" id="2_jykvb"]
[ext_resource type="SpriteFrames" uid="uid://1cdfw8hwi070" path="res://bosses/mision4/ferxxo_boss_frames.tres" id="3_rlwpo"]
[ext_resource type="PackedScene" uid="uid://bb2on2s7jjo1" path="res://effects/mission2/explotion_dimadon_effect.tscn" id="4_0hdj7"]
[ext_resource type="PackedScene" uid="uid://cb0rfcc0ftgx1" path="res://projectiles/laser_ferxxo_nova.tscn" id="5_hqdu4"]
[ext_resource type="PackedScene" uid="uid://b7q84ev4cssft" path="res://menus/healthbar/healthbar.tscn" id="6_62gdm"]
[ext_resource type="LabelSettings" uid="uid://dybimu7heuf27" path="res://themes/labels/bosses_healthbar/ferxxo_labelhb.tres" id="7_52hdy"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="11_1a1fq"]
[ext_resource type="AudioStream" uid="uid://c3dfpggcdte24" path="res://bosses/mision4/projectiles/chory.mp3" id="12_80dd6"]
[ext_resource type="AudioStream" uid="uid://c5fckkm8hjgtl" path="res://bosses/mision2/projectiles/cactus_dima.wav" id="12_gk6c7"]
[ext_resource type="PackedScene" uid="uid://dyxfsl00dcmcl" path="res://bosses/mision4/projectiles/wow_ferxxo_projectil.tscn" id="12_w3jjq"]
[ext_resource type="Script" path="res://components/variable_pitch_audio_stream_player.gd" id="13_usxdf"]

[node name="FerxxoBoss" instance=ExtResource("1_sr4xh")]
script = ExtResource("2_jykvb")

[node name="AnimatedSprite2D" parent="." index="0"]
sprite_frames = ExtResource("3_rlwpo")
animation = &"center"

[node name="StatsComponent" parent="." index="1"]
health = 15

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HurtboxComponent" index="0"]
polygon = PackedVector2Array(-37, 19, -37, 5, -16, -17, 16, -17, 34, 3, 34, 16, 8, 15, 0, 28, -10, 14)

[node name="CenterMuzzle" type="Marker2D" parent="." index="4"]

[node name="ExplotionSpawnerComponent" parent="." index="5"]
scene = ExtResource("4_0hdj7")

[node name="FlashComponent" parent="." index="7" node_paths=PackedStringArray("sprite")]
sprite = NodePath("../AnimatedSprite2D")

[node name="ShakeComponent" parent="." index="8" node_paths=PackedStringArray("node")]
node = NodePath("../AnimatedSprite2D")

[node name="ProjectileSpawnerComponent" parent="." index="9"]
scene = ExtResource("5_hqdu4")

[node name="FireRateTimer" parent="." index="10"]
wait_time = 1.392

[node name="BorderBounceComponent" parent="States/MoveSideState" index="1" node_paths=PackedStringArray("actor")]
actor = NodePath("../../..")

[node name="CanvasLayer" type="CanvasLayer" parent="." index="12"]

[node name="Healthbar" parent="CanvasLayer" index="0" instance=ExtResource("6_62gdm")]
offset_left = 76.0
offset_top = 20.0
offset_right = 196.0
offset_bottom = 24.0

[node name="Label" type="Label" parent="CanvasLayer" index="1"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -124.0
offset_top = -2.0
offset_right = 6.0
offset_bottom = 18.0
grow_horizontal = 0
text = "ferxxo"
label_settings = ExtResource("7_52hdy")

[node name="ProjectileWow" type="Node2D" parent="." index="13"]
unique_name_in_owner = true
position = Vector2(0, 22)
script = ExtResource("11_1a1fq")
scene = ExtResource("12_w3jjq")

[node name="FireWowRate" type="Timer" parent="." index="14"]
unique_name_in_owner = true
wait_time = 5.0
autostart = true

[node name="LaserAudio" type="AudioStreamPlayer" parent="." index="15"]
stream = ExtResource("12_gk6c7")
bus = &"Effects"
script = ExtResource("13_usxdf")
auto_play_with_variance = true

[node name="WoWAudio" type="AudioStreamPlayer" parent="." index="16"]
stream = ExtResource("12_80dd6")
bus = &"Music"
script = ExtResource("13_usxdf")
auto_play_with_variance = true
